--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/opt/anaconda3/bin/python"
+    "python.pythonPath": "/Users/hirannet/.pyenv/versions/3.8.5/bin/python"
 }
